# python-sentinel-one

./: .gitignore  pyproject.toml
controls/: dropdown.py  endpoint.py
python_sentinel_one/: app.py
python_sentinel_one/pages/: get_demo_page.py
tests/: conftest.py  test_ui.py
utils/: attach.py
